After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775217 - Warning message "gdkcursor-wayland.c:170: Unable to load blank_cursor from the cursor theme" when hiding cursor under Wayland
Warning message "gdkcursor-wayland.c:170: Unable to load blank_cursor from th...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Wayland
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 789564 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2016-11-28 10:29 UTC by Adrien Bustany
Modified: 2017-10-27 16:07 UTC
See Also:
GNOME target: ---
GNOME version: 3.21/3.22


Attachments
wayland: Don't spew warnings for blank cursors (1.69 KB, patch)
2017-04-12 17:58 UTC, Matthias Clasen
committed Details | Review

Description Adrien Bustany 2016-11-28 10:29:56 UTC
Running gnome-terminal-3.22.1-1.fc25.x86_64 under Wayland, a warning message is logged to the journal every time I start typing, and gnome-terminal tries hides the cursor (hiding works though). The exact message is

nov. 28 11:24:34 alu gnome-terminal-[1383]: gdkcursor-wayland.c:170: Unable to load blank_cursor from the cursor theme
Comment 1 Karl 2017-02-21 17:39:33 UTC
I'm also experiencing this behaviour.
Comment 2 Christian Persch 2017-04-12 08:26:32 UTC
This looks to me like a bug in gdkcursor-wayland.c. 

_gdk_wayland_display_get_cursor_for_name_with_scale() checks for some special cursor names (including blank_cursor) before calling _gdk_wayland_cursor_update(), but the functions _gdk_wayland_display_update_cursors() and _gdk_wayland_cursor_set_scale() do not.
Comment 3 Matthias Clasen 2017-04-12 17:58:10 UTC
Created attachment 349742 [details] [review]
wayland: Don't spew warnings for blank cursors

We were unnecessarily spewing warnings when blank cursors
were getting a new scale set. Standardize on "none" as the
name for blank cursors, and avoid the warning.
Comment 4 Matthias Clasen 2017-04-12 17:58:35 UTC
This should fix it. Testing appreciated.
Comment 5 Bjørn Lie 2017-09-16 08:32:14 UTC
Done a minimal bit of testing of this patch and it seems to help.

What I was getting previously was
 Foo: Unable to load none from the cursor theme

This seems gone with this patch in place.
Comment 6 Dominique Leuenberger 2017-10-24 16:16:53 UTC
We did get a downstram bug report though with this patch applied:

http://bugzilla.opensuse.org/show_bug.cgi?id=1064896


quote:
=======
libgtk-3-0 version: 3.22.24-3.1 
gnome-boxes version: 3.26.1-1.1

The patch `gtk3-silence-log-spew-blank-cursors.patch` is causing a SIGSEGV when
I try and use GNOME Boxes to either launch a VM with guest additions, or VNC
into another machine.

I traced it back to a g_str_equal call added by this patch inside
_gdk_wayland_cursor_set_scale -- It would seem somehow window_cursor->name is
ending up null along the way, causing the whole house of cards to come tumbling
down.

======
Comment 7 Matthias Clasen 2017-10-26 04:30:45 UTC
Attachment 349742 [details] pushed as db49d12 - wayland: Don't spew warnings for blank cursors
Comment 8 Vasilis Liaskovitis 2017-10-27 16:07:30 UTC
*** Bug 789564 has been marked as a duplicate of this bug. ***